# astu_connect_microservice

./: .gitignore  API_DOCUMENTATION.md  Caddyfile  build-then-up.sh  docker-compose.yml
admin_web/: dashboard.html  login.html
auth_servise/: .dockerignore  Dockerfile  pyproject.toml
auth_servise/app/: main.py
auth_servise/app/api/: deps.py
auth_servise/app/api/endpoints/: auth.py  users.py
auth_servise/app/core/: config.py  security.py
auth_servise/app/db/: session.py
auth_servise/app/db/models/: user.py
auth_servise/app/schemas/: user.py
auth_servise/app/services/: user_service.py
chat_service/: Dockerfile  pyproject.toml
chat_service/app/: main.py
chat_service/app/application/: dto.py  use_cases.py
chat_service/app/core/: config.py
chat_service/app/domain/: entities.py  repositories.py
chat_service/app/infrastructure/: cassandra_db.py  messaging.py  repositories.py
chat_service/app/interface/api/: deps.py
chat_service/app/interface/api/endpoints/: chat.py  websocket.py
community_service/: .dockerignore  pyproject.toml
community_service/app/: main.py
community_service/app/application/: dto.py  use_cases.py
community_service/app/core/: config.py
community_service/app/domain/: entities.py  repositories.py
community_service/app/infrastructure/: database.py  messaging.py  models.py  repositories.py
community_service/app/interface/api/endpoints/: admin.py  communities.py
feed_service/: pyproject.toml
feed_service/app/: main.py
feed_service/app/application/: dto.py  use_cases.py
feed_service/app/core/: config.py
feed_service/app/domain/: entities.py  repositories.py
feed_service/app/infrastructure/: database.py  messaging.py  models.py  repositories.py
feed_service/app/interface/api/: deps.py
identity_service/: main.py  manual.md  pyproject.toml
identity_service/app/: main.py
identity_service/app/application/: dto.py  use_cases.py
identity_service/app/core/: config.py
identity_service/app/domain/: entities.py  repositories.py
identity_service/app/infrastructure/: database.py  email_sender.py  messaging.py  models.py  repositories.py  security.py
identity_service/app/interface/api/: deps.py
media_service/: Dockerfile  pyproject.toml
media_service/app/: main.py
media_service/app/core/: config.py
media_service/app/infrastructure/: cloudinary_client.py  compression.py  minio_client.py  moderation.py
notification_service/: pyproject.toml
notification_service/app/: main.py
notification_service/app/core/: config.py
notification_service/app/domain/: entities.py
notification_service/app/infrastructure/: database.py  messaging.py  models.py
(+59 files in other folders)
