[project]
name = "community-service"
version = "0.1.0"
description = "ASTU Connect Community Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-jose[cryptography]",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic-settings",
    "aiokafka",
]
